--- a/conin/mediation_variables/Constrained_EM.ipynb
+++ b/conin/mediation_variables/Constrained_EM.ipynb
@@ -20,12 +20,13 @@
    "outputs": [],
    "source": [
     "class HMM:\n",
-    "    '''\n",
-    "    Creates augmented HMM adapted to this tutorial for proof of concept. \n",
+    "    \"\"\"\n",
+    "    Creates augmented HMM adapted to this tutorial for proof of concept.\n",
     "    Single precendence constraint and two auxillary variables to be updated. This is for precedence.\n",
-    "    '''\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(self, tmat, init_dist, emit):\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        all three objects should be np arrays\n",
     "        If n is # hidden states, m # observation states, then:\n",
     "        tmat: (n,n)\n",
@@ -33,37 +34,39 @@
     "        emit: (n,m)\n",
     "        updater: list of updaters\n",
     "        constraint: constraint function\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        if tmat.shape[0] != init_dist.shape[0]:\n",
-    "            warnings.warn('transition and initial distribution have different state space sizes', UserWarning)\n",
+    "            warnings.warn(\n",
+    "                \"transition and initial distribution have different state space sizes\",\n",
+    "                UserWarning,\n",
+    "            )\n",
     "        self.tmat = tmat\n",
     "        self.init_dist = init_dist\n",
     "        self.emit = emit\n",
     "\n",
-    "\n",
     "    def random_draw(self, p):\n",
-    "        '''\n",
-    "        p is a 1D np array. \n",
+    "        \"\"\"\n",
+    "        p is a 1D np array.\n",
     "        single random draw from p and encode as 1-hot.\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        n = len(p)\n",
-    "        draw = np.random.choice(n,p=p)\n",
-    "        one_hot = np.zeros(n, dtype = int)\n",
+    "        draw = np.random.choice(n, p=p)\n",
+    "        one_hot = np.zeros(n, dtype=int)\n",
     "        one_hot[draw] = 1\n",
     "        return one_hot\n",
     "\n",
-    "    def simulation(self,time):\n",
-    "        '''\n",
+    "    def simulation(self, time):\n",
+    "        \"\"\"\n",
     "        generates a full run for specified time.\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "\n",
-    "        #Generate (X1,Y1)\n",
+    "        # Generate (X1,Y1)\n",
     "        x_prev = self.random_draw(self.init_dist)\n",
     "        x_list = [x_prev]\n",
     "        y_list = [self.random_draw(x_prev @ self.emit)]\n",
     "\n",
-    "        #Generate rest\n",
-    "        for t in range(time-1):\n",
+    "        # Generate rest\n",
+    "        for t in range(time - 1):\n",
     "            x_curr = self.random_draw(x_prev @ self.tmat)\n",
     "            y_curr = self.random_draw(x_curr @ self.emit)\n",
     "            x_list.append(x_curr)\n",
@@ -72,9 +75,7 @@
     "\n",
     "        return x_list, y_list\n",
     "\n",
-    "    # def viterbi(self,):\n",
-    "\n",
-    "    "
+    "    # def viterbi(self,):"
    ]
   },
   {
@@ -87,7 +88,7 @@
     "def softmax(x):\n",
     "    c = np.exp(x)\n",
     "    z = c.sum()\n",
-    "    return c/z"
+    "    return c / z"
    ]
   },
   {
@@ -108,8 +109,8 @@
     }
    ],
    "source": [
-    "tmat = np.random.randn(3,3)\n",
-    "emit = np.random.randn(3,2)\n",
+    "tmat = np.random.randn(3, 3)\n",
+    "emit = np.random.randn(3, 2)\n",
     "\n",
     "# tmat1 = torch.from_numpy(tmat)\n",
     "tmat = np.apply_along_axis(softmax, 1, tmat)\n",
@@ -127,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "init_prob = tmat[0,:]"
+    "init_prob = tmat[0, :]"
    ]
   },
   {
@@ -137,24 +138,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_counter(z,x, i):\n",
+    "def update_counter(z, x, i):\n",
     "    ret_val = z\n",
     "    if x[i] == 1:\n",
     "        ret_val = ret_val + 1\n",
-    "    return max(ret_val,1)\n",
+    "    return max(ret_val, 1)\n",
     "\n",
-    "def time_constraint(z1,z2):\n",
+    "\n",
+    "def time_constraint(z1, z2):\n",
     "    return z1 >= z2\n",
     "\n",
-    "def constraint_checker(x,i,j):\n",
+    "\n",
+    "def constraint_checker(x, i, j):\n",
     "    truth_val = True\n",
     "    cA = 0\n",
     "    cB = 0\n",
     "    for t in range(len(x)):\n",
     "        cA = update_counter(cA, x[t], 0)\n",
     "        cB = update_counter(cA, x[t], 1)\n",
-    "        truth_val = time_constraint(cA,cB) and truth_val\n",
-    "    return truth_val\n"
+    "        truth_val = time_constraint(cA, cB) and truth_val\n",
+    "    return truth_val"
    ]
   },
   {
@@ -215,26 +218,26 @@
     "        D (np.ndarray): Accumulated probability matrix\n",
     "        E (np.ndarray): Backtracking matrix\n",
     "    \"\"\"\n",
-    "    I = A.shape[0]    # Number of states\n",
+    "    I = A.shape[0]  # Number of states\n",
     "    N = len(O)  # Length of observation sequence\n",
     "\n",
     "    # Initialize D and E matrices\n",
     "    D = np.zeros((I, N))\n",
-    "    E = np.zeros((I, N-1)).astype(np.int32)\n",
+    "    E = np.zeros((I, N - 1)).astype(np.int32)\n",
     "    D[:, 0] = np.multiply(C, B[:, O[0]])\n",
     "\n",
     "    # Compute D and E in a nested loop\n",
     "    for n in range(1, N):\n",
     "        for i in range(I):\n",
-    "            temp_product = np.multiply(A[:, i], D[:, n-1])\n",
+    "            temp_product = np.multiply(A[:, i], D[:, n - 1])\n",
     "            D[i, n] = np.max(temp_product) * B[i, O[n]]\n",
-    "            E[i, n-1] = np.argmax(temp_product)\n",
+    "            E[i, n - 1] = np.argmax(temp_product)\n",
     "\n",
     "    # Backtracking\n",
     "    S_opt = np.zeros(N).astype(np.int32)\n",
     "    S_opt[-1] = np.argmax(D[:, -1])\n",
-    "    for n in range(N-2, -1, -1):\n",
-    "        S_opt[n] = E[int(S_opt[n+1]), n]\n",
+    "    for n in range(N - 2, -1, -1):\n",
+    "        S_opt[n] = E[int(S_opt[n + 1]), n]\n",
     "\n",
     "    return S_opt, D, E"
    ]
@@ -262,25 +265,29 @@
     }
    ],
    "source": [
-    "tmat = np.array([\n",
-    "    [1,0,0,0,0,0],\n",
-    "    [0,1/3,1/3,1/3,0,0],\n",
-    "    [0,1/3,1/3,1/3,0,0],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "])\n",
+    "tmat = np.array(\n",
+    "    [\n",
+    "        [1, 0, 0, 0, 0, 0],\n",
+    "        [0, 1 / 3, 1 / 3, 1 / 3, 0, 0],\n",
+    "        [0, 1 / 3, 1 / 3, 1 / 3, 0, 0],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "    ]\n",
+    ")\n",
     "# row/cols are indexed in dictionary order: (0,0), (1,0),...(2,1)\n",
     "#\n",
     "\n",
-    "emit = np.array([\n",
-    "    [0,0,.8,.2],\n",
-    "    [.2,.8,0,0],\n",
-    "    [0,0,.5,.5],\n",
-    "    [0,0,.8,.2],\n",
-    "    [0,0,.2,.8],\n",
-    "    [0,0,.5,.5]\n",
-    "])\n",
+    "emit = np.array(\n",
+    "    [\n",
+    "        [0, 0, 0.8, 0.2],\n",
+    "        [0.2, 0.8, 0, 0],\n",
+    "        [0, 0, 0.5, 0.5],\n",
+    "        [0, 0, 0.8, 0.2],\n",
+    "        [0, 0, 0.2, 0.8],\n",
+    "        [0, 0, 0.5, 0.5],\n",
+    "    ]\n",
+    ")\n",
     "emit"
    ]
   },
@@ -311,7 +318,7 @@
     }
    ],
    "source": [
-    "init_prob = np.array([0,1/3,1/3,1/3,0,0])\n",
+    "init_prob = np.array([0, 1 / 3, 1 / 3, 1 / 3, 0, 0])\n",
     "init_prob"
    ]
   },
@@ -363,7 +370,7 @@
     }
    ],
    "source": [
-    "og_obs = [1,1,0,1,1,0, 1]\n",
+    "og_obs = [1, 1, 0, 1, 1, 0, 1]\n",
     "shift_obs = np.array(og_obs) + 2\n",
     "shift_obs"
    ]
@@ -391,20 +398,20 @@
     "B = emit\n",
     "O = shift_obs\n",
     "\n",
-    "#O = np.array([1]).astype(np.int32)\n",
-    "#O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
+    "# O = np.array([1]).astype(np.int32)\n",
+    "# O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
     "\n",
     "# Apply Viterbi algorithm\n",
     "S_opt, D, E = viterbi(A, C, B, O)\n",
     "\n",
-    "#Now convert expanded states into original states\n",
+    "# Now convert expanded states into original states\n",
     "\n",
     "S_convert = S_opt % 3\n",
     "\n",
     "\n",
-    "print('Observation sequence:   O = ', O)\n",
-    "print('Optimal Augmented Hidden State: S_aug = ', S_opt)\n",
-    "print('Optimal Original Hidden State: S = ', S_convert)"
+    "print(\"Observation sequence:   O = \", O)\n",
+    "print(\"Optimal Augmented Hidden State: S_aug = \", S_opt)\n",
+    "print(\"Optimal Original Hidden State: S = \", S_convert)"
    ]
   },
   {
@@ -414,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, Y = np.meshgrid([0,1,2], [0,1])\n"
+    "X, Y = np.meshgrid([0, 1, 2], [0, 1])"
    ]
   },
   {
@@ -424,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x,y):\n",
+    "def f(x, y):\n",
     "    return x + y"
    ]
   },
@@ -446,7 +453,7 @@
     }
    ],
    "source": [
-    "f(X,Y).max().item()"
+    "f(X, Y).max().item()"
    ]
   },
   {
@@ -457,35 +464,40 @@
    "outputs": [],
    "source": [
     "def viterbi(tmat, init_prob, emit, y_fun, c_fun, obs):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    tmat and emit are the transition and emission matrices respectively.\n",
     "    init_prob is the starting prob, a 1D array.\n",
     "    y_fun is the function p(y_t|z_t,y_{t-1}): 3 arguments\n",
     "    c_fun is a function that checkes if z_t, y_t is consistent with c_t = 1: 2 arguments\n",
     "\n",
     "    obs is a list of integers\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    T = len(obs)\n",
     "    n_s, n_e = tmat.shape[1], emit.shape[1]\n",
-    "    V = np.zeros((T,n_s,2)) \n",
-    "    E = np.zeros((T-1,n_s,2))\n",
+    "    V = np.zeros((T, n_s, 2))\n",
+    "    E = np.zeros((T - 1, n_s, 2))\n",
     "    x = obs\n",
-    "    \n",
+    "\n",
     "    Z, Y = np.meshgrid(list(range(n_s)), list(range(2)))\n",
-    "    \n",
+    "\n",
     "    for k in range(n_s):\n",
     "        for r in range(2):\n",
-    "            V[0,k,r] = init_prob[k]*emit[k,x[0]]*c_fun(k,r)\n",
+    "            V[0, k, r] = init_prob[k] * emit[k, x[0]] * c_fun(k, r)\n",
     "\n",
-    "    for t in range(1,T):\n",
+    "    for t in range(1, T):\n",
     "        for k in range(n_s):\n",
     "            for r in range(2):\n",
-    "                val_fun = lambda z,y: tmat[z,k]*V[t-1,z,y]*emit[k,x[t]]*y_fun(r,z,y)*c_fun(k,r)\n",
-    "                V[t,k,r] = val_fun(Z,Y).max().item()\n",
-    "                e_fun = lambda z,y: tmat[z,k]*V[t-1,z,y]*y_fun(r,z,y)\n",
-    "                E_val = e_fun(Z,Y)\n",
-    "                E[t-1,k,r] = np.unravel_index(np.argmax(E_val), E_val.shape)\n",
-    "                \n"
+    "                val_fun = (\n",
+    "                    lambda z, y: tmat[z, k]\n",
+    "                    * V[t - 1, z, y]\n",
+    "                    * emit[k, x[t]]\n",
+    "                    * y_fun(r, z, y)\n",
+    "                    * c_fun(k, r)\n",
+    "                )\n",
+    "                V[t, k, r] = val_fun(Z, Y).max().item()\n",
+    "                e_fun = lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
+    "                E_val = e_fun(Z, Y)\n",
+    "                E[t - 1, k, r] = np.unravel_index(np.argmax(E_val), E_val.shape)"
    ]
   },
   {
@@ -495,19 +507,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def maximize(f, n_s, n_y, ret_val = True):\n",
-    "    '''\n",
+    "def maximize(f, n_s, n_y, ret_val=True):\n",
+    "    \"\"\"\n",
     "    brute-force maximizer since numpy dones't play well with grids and logical functions\n",
     "    we only need to keep track of the original states\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    arg_max = None\n",
     "    val_max = -999\n",
     "    for i in range(n_s):\n",
     "        for j in range(n_y):\n",
-    "            val = f(i,j)\n",
+    "            val = f(i, j)\n",
     "            if val > val_max:\n",
     "                val_max = val\n",
-    "                arg_max = (i,j)\n",
+    "                arg_max = (i, j)\n",
     "    if ret_val:\n",
     "        return val_max\n",
     "    else:\n",
@@ -522,14 +534,15 @@
    "outputs": [],
    "source": [
     "def y_fun(y1, z, y0):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Checks assignment y_1 is consistent with z,y0.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    target = int(max(y0, int(z == 0)))\n",
     "    return int(y1 == target)\n",
     "\n",
-    "def c_fun(z,y):\n",
-    "    violate = ((z == 1) and (y == 0))\n",
+    "\n",
+    "def c_fun(z, y):\n",
+    "    violate = (z == 1) and (y == 0)\n",
     "    return int(not violate)"
    ]
   },
@@ -559,10 +572,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_prob = np.array([1/3,1/3,1/3])\n",
-    "tmat = np.tile(init_prob, (3, 1)).T \n",
-    "emit = np.array([[.8,.2],[.2,.8],[.5,.5]])\n",
-    "obs = [0,1,1]"
+    "init_prob = np.array([1 / 3, 1 / 3, 1 / 3])\n",
+    "tmat = np.tile(init_prob, (3, 1)).T\n",
+    "emit = np.array([[0.8, 0.2], [0.2, 0.8], [0.5, 0.5]])\n",
+    "obs = [0, 1, 1]"
    ]
   },
   {
@@ -583,23 +596,29 @@
    "source": [
     "T = len(obs)\n",
     "n_s, n_e = tmat.shape[1], emit.shape[1]\n",
-    "V = np.zeros((T,n_s,2)) \n",
-    "E = np.zeros((T-1,n_s,2))\n",
+    "V = np.zeros((T, n_s, 2))\n",
+    "E = np.zeros((T - 1, n_s, 2))\n",
     "x = obs\n",
     "\n",
     "for k in range(n_s):\n",
     "    for r in range(2):\n",
-    "        V[0,k,r] = init_prob[k]*emit[k,x[0]]*c_fun(k,r)\n",
+    "        V[0, k, r] = init_prob[k] * emit[k, x[0]] * c_fun(k, r)\n",
     "\n",
-    "    for t in range(1,T):\n",
+    "    for t in range(1, T):\n",
     "        for k in range(n_s):\n",
     "            for r in range(2):\n",
-    "                val_fun = lambda z,y: tmat[z,k]*V[t-1,z,y]*emit[k,x[t]]*y_fun(r,z,y)*c_fun(k,r)\n",
-    "                V[t,k,r] = maximize(val_fun, n_s, 2, ret_val = True)\n",
-    "                e_fun = lambda z,y: tmat[z,k]*V[t-1,z,y]*y_fun(r,z,y)\n",
-    "                E[t-1,k,r] = maximize(e_fun,n_s,2,ret_val = False)\n",
+    "                val_fun = (\n",
+    "                    lambda z, y: tmat[z, k]\n",
+    "                    * V[t - 1, z, y]\n",
+    "                    * emit[k, x[t]]\n",
+    "                    * y_fun(r, z, y)\n",
+    "                    * c_fun(k, r)\n",
+    "                )\n",
+    "                V[t, k, r] = maximize(val_fun, n_s, 2, ret_val=True)\n",
+    "                e_fun = lambda z, y: tmat[z, k] * V[t - 1, z, y] * y_fun(r, z, y)\n",
+    "                E[t - 1, k, r] = maximize(e_fun, n_s, 2, ret_val=False)\n",
     "\n",
-    "max_prob = V[T-1,:,:].max().item()\n"
+    "max_prob = V[T - 1, :, :].max().item()"
    ]
   },
   {
@@ -710,7 +729,7 @@
     }
    ],
    "source": [
-    "constraint_checker(x_test,0,1)"
+    "constraint_checker(x_test, 0, 1)"
    ]
   },
   {
@@ -762,7 +781,7 @@
     }
    ],
    "source": [
-    "constraint_checker(x_list, 0 ,1)"
+    "constraint_checker(x_list, 0, 1)"
    ]
   },
   {
@@ -802,8 +821,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_updater = lambda z,x: update_counter(z,x,0)\n",
-    "B_updater = lambda z,x: update_counter(z,x,1)"
+    "A_updater = lambda z, x: update_counter(z, x, 0)\n",
+    "B_updater = lambda z, x: update_counter(z, x, 1)"
    ]
   },
   {
