--- a/conin/mediation_variables/EM_v1.ipynb
+++ b/conin/mediation_variables/EM_v1.ipynb
@@ -12,7 +12,7 @@
     "from munch import Munch\n",
     "import itertools\n",
     "import mv_EM as em\n",
-    "import mv_Viterbi as vit \n",
+    "import mv_Viterbi as vit\n",
     "from cst_aggregate import cst_aggregate"
    ]
   },
@@ -63,28 +63,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hidden_states = ['a','b','c']\n",
-    "emit_states = ['A','C']\n",
+    "hidden_states = [\"a\", \"b\", \"c\"]\n",
+    "emit_states = [\"A\", \"C\"]\n",
     "hmm_transition = {}\n",
     "for i in hidden_states:\n",
     "    for j in hidden_states:\n",
-    "        hmm_transition[i,j] = 1/3\n",
+    "        hmm_transition[i, j] = 1 / 3\n",
     "\n",
-    "emit_mat = np.array([\n",
-    "    [.8,.2],\n",
-    "    [.5,.5],\n",
-    "    [.2,.8]\n",
-    "])\n",
+    "emit_mat = np.array([[0.8, 0.2], [0.5, 0.5], [0.2, 0.8]])\n",
     "hmm_emit = {}\n",
     "for i in range(3):\n",
     "    for j in range(2):\n",
-    "        hmm_emit[hidden_states[i],emit_states[j]] = emit_mat[i,j].item()\n",
-    "        \n",
+    "        hmm_emit[hidden_states[i], emit_states[j]] = emit_mat[i, j].item()\n",
+    "\n",
     "hmm_startprob = {}\n",
     "for i in hidden_states:\n",
-    "    hmm_startprob[i] = 1/3\n",
+    "    hmm_startprob[i] = 1 / 3\n",
     "\n",
-    "hmm = Munch(states = hidden_states, emits = emit_states, tprob = hmm_transition, eprob = hmm_emit, initprob = hmm_startprob)"
+    "hmm = Munch(\n",
+    "    states=hidden_states,\n",
+    "    emits=emit_states,\n",
+    "    tprob=hmm_transition,\n",
+    "    eprob=hmm_emit,\n",
+    "    initprob=hmm_startprob,\n",
+    ")"
    ]
   },
   {
@@ -102,32 +104,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun(r,k , r_past):\n",
-    "    '''\n",
-    "    m1^t = tau^t_a = a OR tau^{t-1}_a #tracks if state a has happend yet \n",
+    "def update_fun(r, k, r_past):\n",
+    "    \"\"\"\n",
+    "    m1^t = tau^t_a = a OR tau^{t-1}_a #tracks if state a has happend yet\n",
     "    m2^t = [1- (1 - tau^t_a) AND c)] AND m2^{t-1} = [tau^t_a or (1 - c)] AND m2^{t-1} #tracks if the arrival time of a is before c\n",
     "    k is the current state\n",
     "    r is the auxillary state. a 2-tuple. r = (m1,m2)\n",
-    "    '''\n",
-    "    m1 = (k == 'a') or r_past[0]\n",
-    "    m2 = (m1 or (not k == 'c')) and r_past[1]\n",
+    "    \"\"\"\n",
+    "    m1 = (k == \"a\") or r_past[0]\n",
+    "    m2 = (m1 or (not k == \"c\")) and r_past[1]\n",
     "\n",
-    "    return int(r == (m1,m2))\n",
+    "    return int(r == (m1, m2))\n",
+    "\n",
     "\n",
     "def init_fun(k, r):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    initial \"prob\" of r = (m1,m2) from k. is just indicator\n",
-    "    '''\n",
-    "    m1 = k == 'a'\n",
-    "    m2 = not k == 'c'\n",
+    "    \"\"\"\n",
+    "    m1 = k == \"a\"\n",
+    "    m2 = not k == \"c\"\n",
     "\n",
-    "    return int(r == (m1,m2))\n",
-    "    \n",
+    "    return int(r == (m1, m2))\n",
+    "\n",
+    "\n",
     "def cst_fun(r, sat):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Constraint is a boolean emissions of the final auxillary state. In this case, is just m1^T: ie. tau_a >= tau_b for all time.\n",
-    "    '''\n",
-    "    return int(r[1] == sat) "
+    "    \"\"\"\n",
+    "    return int(r[1] == sat)"
    ]
   },
   {
@@ -137,7 +141,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "precedence_cst = Munch(name = 'a occurs before c',aux_size = 2, update_fun = update_fun, init_fun = init_fun, cst_fun = cst_fun)"
+    "precedence_cst = Munch(\n",
+    "    name=\"a occurs before c\",\n",
+    "    aux_size=2,\n",
+    "    update_fun=update_fun,\n",
+    "    init_fun=init_fun,\n",
+    "    cst_fun=cst_fun,\n",
+    ")"
    ]
   },
   {
@@ -157,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C','C','C','A','A']"
+    "obs = [\"C\", \"C\", \"A\", \"C\", \"A\", \"C\", \"C\", \"C\", \"A\", \"A\"]"
    ]
   },
   {
@@ -179,6 +189,7 @@
    ],
    "source": [
     "import importlib\n",
+    "\n",
     "importlib.reload(em)"
    ]
   },
@@ -189,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm_params, prob_data = em.mv_EM(obs, hmm, precedence_cst, sat = True, debug = True)"
+    "hmm_params, prob_data = em.mv_EM(obs, hmm, precedence_cst, sat=True, debug=True)"
    ]
   },
   {
@@ -275,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = vit.mv_Viterbi(obs, hmm, precedence_cst, sat = True)"
+    "opt_aug, opt_state = vit.mv_Viterbi(obs, hmm, precedence_cst, sat=True)"
    ]
   },
   {
@@ -316,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['A','A','C','A','C','A','C']"
+    "obs = [\"A\", \"A\", \"C\", \"A\", \"C\", \"A\", \"C\"]"
    ]
   },
   {
@@ -326,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat = False)"
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, precedence_cst, sat=False)"
    ]
   },
   {
@@ -367,28 +378,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_fun2(r,k , r_past):\n",
-    "    '''\n",
+    "def update_fun2(r, k, r_past):\n",
+    "    \"\"\"\n",
     "    m1 = = tau_b or b . tracks if b has occured\n",
-    "    '''\n",
-    "    m1 = (k == 'b') or r_past[0]\n",
+    "    \"\"\"\n",
+    "    m1 = (k == \"b\") or r_past[0]\n",
     "\n",
     "    return int(r == (m1,))\n",
+    "\n",
     "\n",
     "def init_fun2(k, r):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    initial \"prob\" of r = m1,m2 from k. is just indicator\n",
-    "    '''\n",
-    "    m1 = k == 'b'\n",
+    "    \"\"\"\n",
+    "    m1 = k == \"b\"\n",
     "\n",
     "    return int(r == (m1,))\n",
-    "    \n",
+    "\n",
+    "\n",
     "def cst_fun2(r, sat):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Constraint is a boolean emissions of the final auxillary state. In this case\n",
-    "    '''\n",
-    "    \n",
-    "    return int(r[0]  == sat) "
+    "    \"\"\"\n",
+    "\n",
+    "    return int(r[0] == sat)"
    ]
   },
   {
@@ -398,7 +411,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "occurence_cst = Munch(name = 'b must occur', aux_size = 1, update_fun = update_fun2, init_fun = init_fun2, cst_fun = cst_fun2)"
+    "occurence_cst = Munch(\n",
+    "    name=\"b must occur\",\n",
+    "    aux_size=1,\n",
+    "    update_fun=update_fun2,\n",
+    "    init_fun=init_fun2,\n",
+    "    cst_fun=cst_fun2,\n",
+    ")"
    ]
   },
   {
@@ -408,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C']"
+    "obs = [\"C\", \"C\", \"A\", \"C\", \"A\", \"C\"]"
    ]
   },
   {
@@ -418,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat = True)"
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat=True)"
    ]
   },
   {
@@ -459,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C']"
+    "obs = [\"C\", \"C\", \"A\", \"C\", \"A\", \"C\"]"
    ]
   },
   {
@@ -480,7 +499,7 @@
     }
    ],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat = False)\n",
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, occurence_cst, sat=False)\n",
     "opt_state"
    ]
   },
@@ -512,7 +531,7 @@
     }
    ],
    "source": [
-    "cst_list = [precedence_cst,occurence_cst]\n",
+    "cst_list = [precedence_cst, occurence_cst]\n",
     "combined_cst = cst_aggregate(cst_list)\n",
     "combined_cst.name"
    ]
@@ -534,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C']"
+    "obs = [\"C\", \"C\", \"A\", \"C\", \"A\", \"C\"]"
    ]
   },
   {
@@ -544,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat = (True,True))"
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat=(True, True))"
    ]
   },
   {
@@ -585,7 +604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = ['C','C','A','C','A','C']"
+    "obs = [\"C\", \"C\", \"A\", \"C\", \"A\", \"C\"]"
    ]
   },
   {
@@ -606,7 +625,7 @@
     }
    ],
    "source": [
-    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat = (True,False))\n",
+    "opt_aug, opt_state = mv_Viterbi(obs, hmm, combined_cst, sat=(True, False))\n",
     "opt_state"
    ]
   }
