--- a/conin/mediation_variables/Viterbi_clean.ipynb
+++ b/conin/mediation_variables/Viterbi_clean.ipynb
@@ -84,26 +84,26 @@
     "        D (np.ndarray): Accumulated probability matrix\n",
     "        E (np.ndarray): Backtracking matrix\n",
     "    \"\"\"\n",
-    "    I = A.shape[0]    # Number of states\n",
+    "    I = A.shape[0]  # Number of states\n",
     "    N = len(O)  # Length of observation sequence\n",
     "\n",
     "    # Initialize D and E matrices\n",
     "    D = np.zeros((I, N))\n",
-    "    E = np.zeros((I, N-1)).astype(np.int32)\n",
+    "    E = np.zeros((I, N - 1)).astype(np.int32)\n",
     "    D[:, 0] = np.multiply(C, B[:, O[0]])\n",
     "\n",
     "    # Compute D and E in a nested loop\n",
     "    for n in range(1, N):\n",
     "        for i in range(I):\n",
-    "            temp_product = np.multiply(A[:, i], D[:, n-1])\n",
+    "            temp_product = np.multiply(A[:, i], D[:, n - 1])\n",
     "            D[i, n] = np.max(temp_product) * B[i, O[n]]\n",
-    "            E[i, n-1] = np.argmax(temp_product)\n",
+    "            E[i, n - 1] = np.argmax(temp_product)\n",
     "\n",
     "    # Backtracking\n",
     "    S_opt = np.zeros(N).astype(np.int32)\n",
     "    S_opt[-1] = np.argmax(D[:, -1])\n",
-    "    for n in range(N-2, -1, -1):\n",
-    "        S_opt[n] = E[int(S_opt[n+1]), n]\n",
+    "    for n in range(N - 2, -1, -1):\n",
+    "        S_opt[n] = E[int(S_opt[n + 1]), n]\n",
     "\n",
     "    return S_opt, D, E"
    ]
@@ -145,25 +145,36 @@
     }
    ],
    "source": [
-    "tmat = np.array([\n",
-    "    [1,0,0,0,0,0], #impossible state. just set it to an absorbing one that should never occur.\n",
-    "    [0,1/3,1/3,1/3,0,0],\n",
-    "    [0,1/3,1/3,1/3,0,0],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "    [0,0,0,1/3,1/3,1/3],\n",
-    "])\n",
+    "tmat = np.array(\n",
+    "    [\n",
+    "        [\n",
+    "            1,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "            0,\n",
+    "        ],  # impossible state. just set it to an absorbing one that should never occur.\n",
+    "        [0, 1 / 3, 1 / 3, 1 / 3, 0, 0],\n",
+    "        [0, 1 / 3, 1 / 3, 1 / 3, 0, 0],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "        [0, 0, 0, 1 / 3, 1 / 3, 1 / 3],\n",
+    "    ]\n",
+    ")\n",
     "# row/cols are indexed in dictionary order: (0,0), (1,0),...(2,1)\n",
     "#\n",
     "\n",
-    "emit = np.array([\n",
-    "    [0,0,.8,.2],\n",
-    "    [.2,.8,0,0],\n",
-    "    [0,0,.5,.5],\n",
-    "    [0,0,.8,.2],\n",
-    "    [0,0,.2,.8],\n",
-    "    [0,0,.5,.5]\n",
-    "])\n",
+    "emit = np.array(\n",
+    "    [\n",
+    "        [0, 0, 0.8, 0.2],\n",
+    "        [0.2, 0.8, 0, 0],\n",
+    "        [0, 0, 0.5, 0.5],\n",
+    "        [0, 0, 0.8, 0.2],\n",
+    "        [0, 0, 0.2, 0.8],\n",
+    "        [0, 0, 0.5, 0.5],\n",
+    "    ]\n",
+    ")\n",
     "tmat"
    ]
   },
@@ -194,7 +205,7 @@
     }
    ],
    "source": [
-    "init_prob = np.array([0,1/3,1/3,1/3,0,0])\n",
+    "init_prob = np.array([0, 1 / 3, 1 / 3, 1 / 3, 0, 0])\n",
     "init_prob"
    ]
   },
@@ -224,7 +235,7 @@
     }
    ],
    "source": [
-    "og_obs = [1,1,1, 1, 0,1,0,1,1,0, 1]\n",
+    "og_obs = [1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1]\n",
     "shift_obs = np.array(og_obs) + 2\n",
     "shift_obs"
    ]
@@ -252,20 +263,20 @@
     "B = emit\n",
     "O = shift_obs\n",
     "\n",
-    "#O = np.array([1]).astype(np.int32)\n",
-    "#O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
+    "# O = np.array([1]).astype(np.int32)\n",
+    "# O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
     "\n",
     "# Apply Viterbi algorithm\n",
     "S_opt, D, E = viterbi(A, C, B, O)\n",
     "\n",
-    "#Now convert expanded states into original states\n",
+    "# Now convert expanded states into original states\n",
     "\n",
     "S_convert = S_opt % 3\n",
     "\n",
-    "#Number of initial 1 emissions is greater than 2.\n",
-    "print('Observation sequence:   O = ', O)\n",
-    "print('Optimal Augmented Hidden State: S_aug = ', S_opt)\n",
-    "print('Optimal Original Hidden State: S = ', S_convert)"
+    "# Number of initial 1 emissions is greater than 2.\n",
+    "print(\"Observation sequence:   O = \", O)\n",
+    "print(\"Optimal Augmented Hidden State: S_aug = \", S_opt)\n",
+    "print(\"Optimal Original Hidden State: S = \", S_convert)"
    ]
   },
   {
@@ -286,7 +297,7 @@
     }
    ],
    "source": [
-    "og_obs = [1,1,0,1,0,1,1,0, 1]\n",
+    "og_obs = [1, 1, 0, 1, 0, 1, 1, 0, 1]\n",
     "shift_obs = np.array(og_obs) + 2\n",
     "shift_obs"
    ]
@@ -314,20 +325,20 @@
     "B = emit\n",
     "O = shift_obs\n",
     "\n",
-    "#O = np.array([1]).astype(np.int32)\n",
-    "#O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
+    "# O = np.array([1]).astype(np.int32)\n",
+    "# O = np.array([1, 2, 0, 2, 2, 1]).astype(np.int32)\n",
     "\n",
     "# Apply Viterbi algorithm\n",
     "S_opt, D, E = viterbi(A, C, B, O)\n",
     "\n",
-    "#Now convert expanded states into original states\n",
+    "# Now convert expanded states into original states\n",
     "\n",
     "S_convert = S_opt % 3\n",
     "\n",
-    "#Number of initial 1 emissions is greater than 2.\n",
-    "print('Observation sequence:   O = ', O)\n",
-    "print('Optimal Augmented Hidden State: S_aug = ', S_opt)\n",
-    "print('Optimal Original Hidden State: S = ', S_convert)"
+    "# Number of initial 1 emissions is greater than 2.\n",
+    "print(\"Observation sequence:   O = \", O)\n",
+    "print(\"Optimal Augmented Hidden State: S_aug = \", S_opt)\n",
+    "print(\"Optimal Original Hidden State: S = \", S_convert)"
    ]
   },
   {
