Black line length fix

--- a/conin/mediation_variables/EM_v1.ipynb
+++ b/conin/mediation_variables/EM_v1.ipynb
@@ -200,7 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm_params, prob_data = em.mv_EM(obs, hmm, precedence_cst, sat=True, debug=True)"
+    "hmm_params, prob_data = em.mv_EM(\n",
+    "    obs, hmm, precedence_cst, sat=True, debug=True\n",
+    ")"
    ]
   },
   {
