--- a/conin/mediation_variables/working.ipynb
+++ b/conin/mediation_variables/working.ipynb
@@ -189,7 +189,9 @@
     "\n",
     "    for k in hmm.states:\n",
     "        for r in aux_space:\n",
-    "            val[0, k, r] = cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
+    "            val[0, k, r] = (\n",
+    "                cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
+    "            )\n",
     "\n",
     "    ix_tracker = {}\n",
     "\n",
@@ -204,13 +206,19 @@
     "                for j in hmm.states:\n",
     "                    for s in aux_space:\n",
     "                        curr_val = (\n",
-    "                            val[t - 1, j, s] * hmm.tprob[j, k] * cst.update_fun(r, j, s)\n",
+    "                            val[t - 1, j, s]\n",
+    "                            * hmm.tprob[j, k]\n",
+    "                            * cst.update_fun(r, j, s)\n",
     "                        )\n",
     "                        if curr_val > max_val:\n",
     "                            max_val = curr_val\n",
     "                            argmax = (j, s)\n",
-    "                if t == (len(obs) - 1):  # ie. at the last time we add in the constraint\n",
-    "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
+    "                if t == (\n",
+    "                    len(obs) - 1\n",
+    "                ):  # ie. at the last time we add in the constraint\n",
+    "                    val[t, k, r] = (\n",
+    "                        max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
+    "                    )\n",
     "                else:\n",
     "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]]\n",
     "                ix_tracker[t - 1, k, r] = argmax\n",
@@ -552,7 +560,9 @@
     "\n",
     "    for k in hmm.states:\n",
     "        for r in aux_space:\n",
-    "            val[0, k, r] = cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
+    "            val[0, k, r] = (\n",
+    "                cst.init_fun(k, r) * hmm.initprob[k] * hmm.eprob[k, obs[0]]\n",
+    "            )\n",
     "\n",
     "    ix_tracker = {}\n",
     "\n",
@@ -567,13 +577,19 @@
     "                for j in hmm.states:\n",
     "                    for s in aux_space:\n",
     "                        curr_val = (\n",
-    "                            val[t - 1, j, s] * hmm.tprob[j, k] * cst.update_fun(r, j, s)\n",
+    "                            val[t - 1, j, s]\n",
+    "                            * hmm.tprob[j, k]\n",
+    "                            * cst.update_fun(r, j, s)\n",
     "                        )\n",
     "                        if curr_val > max_val:\n",
     "                            max_val = curr_val\n",
     "                            argmax = (j, s)\n",
-    "                if t == (len(obs) - 1):  # ie. at the last time we add in the constraint\n",
-    "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
+    "                if t == (\n",
+    "                    len(obs) - 1\n",
+    "                ):  # ie. at the last time we add in the constraint\n",
+    "                    val[t, k, r] = (\n",
+    "                        max_val * hmm.eprob[k, obs[t]] * cst.cst_fun(r, sat)\n",
+    "                    )\n",
     "                else:\n",
     "                    val[t, k, r] = max_val * hmm.eprob[k, obs[t]]\n",
     "                ix_tracker[t - 1, k, r] = argmax\n",
@@ -727,7 +743,12 @@
     "for t in range(1, T):\n",
     "    if t == (T - 1):\n",
     "        alpha[t] = np.einsum(\n",
-    "            \"i,ji,ris,js,r->ir\", emit_weights[t], tmat, ind, alpha[t - 1], final_ind\n",
+    "            \"i,ji,ris,js,r->ir\",\n",
+    "            emit_weights[t],\n",
+    "            tmat,\n",
+    "            ind,\n",
+    "            alpha[t - 1],\n",
+    "            final_ind,\n",
     "        )\n",
     "    else:\n",
     "        alpha[t] = np.einsum(\n",
@@ -738,7 +759,12 @@
     "for t in range(1, T):\n",
     "    if t == 1:\n",
     "        beta[T - 1 - t] = np.einsum(\n",
-    "            \"js,j,ij,sjr,s->ir\", beta[T - t], emit_weights[T - t], tmat, ind, final_ind\n",
+    "            \"js,j,ij,sjr,s->ir\",\n",
+    "            beta[T - t],\n",
+    "            emit_weights[T - t],\n",
+    "            tmat,\n",
+    "            ind,\n",
+    "            final_ind,\n",
     "        )\n",
     "    else:\n",
     "        beta[T - 1 - t] = np.einsum(\n",
@@ -935,7 +961,9 @@
     "        for i in hmm.states:\n",
     "            init_ind[aux_ix[r], state_ix[i]] = cst.init_fun(i, r)\n",
     "            for s in aux_space:\n",
-    "                ind[aux_ix[r], state_ix[i], aux_ix[s]] = cst.update_fun(r, i, s)\n",
+    "                ind[aux_ix[r], state_ix[i], aux_ix[s]] = cst.update_fun(\n",
+    "                    r, i, s\n",
+    "                )\n",
     "\n",
     "    cst_params = [init_ind, final_ind, ind]\n",
     "\n",
@@ -986,7 +1014,12 @@
     "    for t in range(1, T):\n",
     "        if t == (T - 1):\n",
     "            alpha[t] = np.einsum(\n",
-    "                \"i,ji,ris,js,r->ir\", emit_weights[t], tmat, ind, alpha[t - 1], final_ind\n",
+    "                \"i,ji,ris,js,r->ir\",\n",
+    "                emit_weights[t],\n",
+    "                tmat,\n",
+    "                ind,\n",
+    "                alpha[t - 1],\n",
+    "                final_ind,\n",
     "            )\n",
     "        else:\n",
     "            alpha[t] = np.einsum(\n",
@@ -1043,7 +1076,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mv_EM(obs, hmm, cst, sat=True, conv_tol=1e-10, max_iter=1000, emit_opt=None):\n",
+    "def mv_EM(\n",
+    "    obs, hmm, cst, sat=True, conv_tol=1e-10, max_iter=1000, emit_opt=None\n",
+    "):\n",
     "\n",
     "    # Convert everything into numpy arrays\n",
     "    old_hmm_params, cst_params = arrayConvert(obs, hmm, cst, sat)\n",
