minor bug fixes

--- a/conin/mediation_variables/apt_experiments-Copy1.ipynb
+++ b/conin/mediation_variables/apt_experiments-Copy1.ipynb
@@ -48,6 +48,48 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "bf6ce633-d6d8-4aa5-a5d6-2eedb1958942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = torch.rand((3,4,5))\n",
+    "A = A > .5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "06673c0b-1e34-42a6-86f6-e19712483577",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = torch.log(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7d02cf54-9bfe-4ff0-afda-40bfeb680827",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2560000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(4**6)*(25**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2d6901ae-d7e7-4556-897b-9287335f881f",
    "metadata": {},
    "outputs": [],
